Traducción de Haskell a Isabelle (execpto recursión mutua)

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -59,6 +59,12 @@
   title        = {Algebraic data type},
   year         = {2020}
 }
+@misc{auction_haskell,
+  author       = {IOHK},
+  howpublished = {\url{https://github.com/input-output-hk/marlowe/blob/master/src/Language/Marlowe/Examples/Auction.hs}},
+  title        = {Auction contract, written in Haskell for the Cardano Blockchain},
+  year         = {2019}
+}
 @inproceedings{bhargavan:hal-01400469,
   address     = {Vienna, Austria},
   author      = {Bhargavan, Karthikeyan and Delignat-Lavaud, Antoine and Fournet, C{\'e}dric and Gollamudi, Anitha and Gonthier, Georges and Kobeissi, Nadim and Kulatova, Natalia and Rastogi, Aseem and Sibut-Pinote, Thomas and Swamy, Nikhil and Zanella-B{\'e}guelin, Santiago},
@@ -84,12 +90,6 @@
   title  = {A Formal Specification of the Cardano Ledger},
   url    = {http://cardano-universe.com/wp-content/uploads/2019/02/ledger-spec.pdf},
   year   = {2019}
-}
-@misc{auction_haskell,
-  author       = {IOHK},
-  howpublished = {\url{https://github.com/input-output-hk/marlowe/blob/master/src/Language/Marlowe/Examples/Auction.hs}},
-  title        = {Auction contract, written in Haskell for the Cardano Blockchain},
-  year         = {2019}
 }
 
 @misc{cardano_website,
@@ -448,6 +448,14 @@
   title     = {Generic automatic proof tools},
   year      = {1997}
 }
+@inproceedings{termination-isabelle,
+  author       = {Bulwahn, Lukas and Krauss, Alexander and Nipkow, Tobias},
+  booktitle    = {International Conference on Theorem Proving in Higher Order Logics},
+  organization = {Springer},
+  pages        = {38--53},
+  title        = {Finding lexicographic orders for termination proofs in Isabelle/HOL},
+  year         = {2007}
+}
 @inbook{The_Extended_UTXO_Model,
   author = {Chakravarty, Manuel and Chapman, James and MacKenzie, Kenneth and Melkonian, Orestis and Jones, Michael and Wadler, Philip},
   doi    = {10.1007/978-3-030-54455-3_37},
@@ -500,12 +508,4 @@
   publisher = {Springer Berlin Heidelberg},
   title     = {Z3: An Efficient SMT Solver},
   year      = {2008}
-}
-@inproceedings{termination-isabelle,
-  title={Finding lexicographic orders for termination proofs in Isabelle/HOL},
-  author={Bulwahn, Lukas and Krauss, Alexander and Nipkow, Tobias},
-  booktitle={International Conference on Theorem Proving in Higher Order Logics},
-  pages={38--53},
-  year={2007},
-  organization={Springer}
 }
