--- a/languages.tex
+++ b/languages.tex
@@ -34,10 +34,10 @@
 \definecolor{isargreen}{HTML}{009966}
 \definecolor{isarred}{HTML}{cc0000}
 \lstdefinelanguage{isabelle}{
-    keywords=[1]{type_synonym,datatype,fun,abbreviation,definition,proof,lemma,theorem,theory,corollary,apply,done,by,env,sta,reduce,warnings,payments,newstate,inputList,reduced,tra,trec,function,termination},
+    keywords=[1]{record,type_synonym,datatype,fun,abbreviation,definition,proof,lemma,theorem,theory,corollary,apply,done,by,env,sta,reduce,warnings,payments,newstate,inputList,reduced,tra,trec,function,termination,contractLoop,handleChoose,handleDeposit},
     morecomment=[s]{(*}{*)}, % chktex 9
     keywordstyle=[1]\bfseries\color{isarblue},
-    keywords=[2]{where,assumes,shows,and,imports,begin,end,a,list,applyWarn,newState,cont},
+    keywords=[2]{where,assumes,shows,and,imports,begin,end,a,applyWarn,newState,cont},
     keywordstyle=[2]\bfseries\color{isargreen},
     keywords=[3]{if,then,else,of,SOME,let,in,O},
     keywordstyle=[3]\color{isarblue},
